# clegmed-template

./: README.md  copier.yml
template/: CMakeLists.txt
template/src/: main.cpp
template/tests/: Await.hpp  main_test.cpp
{{project_name}}/: main.cpp
